# experiments

./: Cargo.toml  LICENSE
ai_mr/: Cargo.toml
ai_mr/src/: app.rs  main.rs
bigfish/: Cargo.toml
experiments/ai_snake/src/: app.rs
experiments/genai/src/: app_ui.rs
genai/: Cargo.toml
genai/src/: app.rs  app_ui.rs  database.rs
xr_net/: Cargo.toml  README.md
