[package]
name = "makepad-experiment-xr-net"
version = "0.9.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad xr-net experiment"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "db3R5Gxh5Njhx8E-8kuZ2plQ1AI="

[dependencies]
makepad-widgets = { path = "../../makepad/widgets", version = "1.0.0" }
makepad-xr-net = { path = "../../makepad/libs/xr_net", version = "1.0.0" }
makepad-miniz  = { path = "../../makepad/libs/miniz", version = "1.0.0" }
